hphp/test/zend/bad/ext/soap/tests/interop/Round2/Base/r2_base_020w.php
<?php
$client = new SoapClient(dirname(__FILE__)."/round2_base.wsdl",array("trace"=>1,"exceptions"=>0));
$client->echoDate('2001-05-24T17:31:41Z');
echo $client->__getlastrequest();
$HTTP_RAW_POST_DATA = $client->__getlastrequest();
include("round2_base.inc");
echo "ok\n";
?>